fix layout bug in the projects list

--- a/src/Views/css/card.css
+++ b/src/Views/css/card.css
@@ -15,6 +15,7 @@
   padding: 5px 10px;
   text-align: left;
   margin: auto;
+  width: 100%;
   margin-bottom: 30px;
   overflow-y: hidden;
 }
